# fiber-nav-sim

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  sitl-test.yml
docker/: .env  Dockerfile  Dockerfile.colosseum  Dockerfile.mesa-test  Dockerfile.o3de  Dockerfile.o3de-gpu-test  VkLayer_dzn_compat.json  add_camera_to_level.py  add_vehicle_to_level.py  capture_video.sh  colosseum-entrypoint.sh  docker-compose.yml  entrypoint.sh  gpu_test.sh  mesa-dzn-query-fix.patch  o3de-entrypoint.sh  px4-sitl-entrypoint.sh  test_headless.sh  test_performance.sh  vk_dzn_compat_layer.c  vk_query_shim.c
docs/: ARCHITECTURE.md  GAZEBO_WRENCH_LESSONS.md  O3DE_MIGRATION_PLAN.md  O3DE_PHASE0_RETRY_PLAN.md  PLAN.md  PX4_GAZEBO_INTEGRATION_PLAN.md  ROADMAP_ZUPT_POSITION.md  VTOL_NAVIGATION_MODE.md  impl-plan-position-ekf.md  plan-optical-flow-direction.md  plan-position-ekf-gps-denied-nav.md
foxglove/: README.md  fiber_nav_layout.json  fiber_nav_proof_layout.json
scripts/: analyze_flight.py  apply_thrust.sh  apply_thrust_ros.py  canyon_wraparound.sh  compare_imu_fusion.py  compare_three_way.py  compare_with_correction.py  debug_heading.py  generate_20km_flight.py  generate_terrain.py  map_bridge_node.py  measure_perf.py  offboard_gps_denied.py  offboard_mission.py  offboard_takeoff.py  offboard_terrain_follow.py  offboard_transition_test.py  plan_mission_final.py  px4_vision_params.sh  record_test_flight.py  run_demo.sh  run_px4_sitl_demo.sh  run_sim_xvfb.sh  run_standalone.sh  run_tests.sh  sim_distance_sensor.py  sim_vision_odometry.py  tercom_node.py  terrain_gis_node.py  test_analysis.py  test_gimbal_integration.py  test_px4_integration.sh  test_sitl_mission.sh  test_terrain.py  wraparound.py
src/fiber_nav_analysis/: package.xml  setup.py
src/fiber_nav_analysis/fiber_nav_analysis/: __init__.py  compute_metrics.py  e2e_mission_test.py  plot_trajectory.py  record_trajectory.py  tercom_evaluator.py  terrain_mission_planner.py  terrain_road_network.py
src/fiber_nav_bringup/: CMakeLists.txt  package.xml
src/fiber_nav_bringup/config/: px4_params.txt  ros_gz_bridge.yaml  sensor_params.yaml  terrain_defaults.yaml
src/fiber_nav_bringup/launch/: colosseum_simulation.launch.py  custom_mode.launch.py  full_simulation.launch.py  gazebo_simulation.launch.py  o3de_simulation.launch.py  px4_sitl.launch.py  sensors.launch.py  simulation.launch.py  test_sensors.launch.py
src/fiber_nav_bringup/test/: test_stabilized_flight.py
src/fiber_nav_colosseum/: CMakeLists.txt  package.xml
src/fiber_nav_colosseum/config/: colosseum_settings.json  multirotor_settings.json
src/fiber_nav_colosseum/include/fiber_nav_colosseum/: airsim_rpc_client.hpp
src/fiber_nav_colosseum/src/: airsim_rpc_client.cpp  colosseum_bridge_node.cpp  colosseum_physics_bridge_node.cpp
src/fiber_nav_colosseum/tests/: airsim_rpc_client_test.cpp
src/fiber_nav_fusion/: CMakeLists.txt  package.xml
src/fiber_nav_fusion/include/fiber_nav_fusion/: position_ekf.hpp  tercom.hpp
src/fiber_nav_fusion/src/: fiber_vision_fusion.cpp  landmark_correction.cpp  position_ekf.cpp  position_ekf_node.cpp  tercom.cpp  tercom_node.cpp
src/fiber_nav_fusion/test/: test_fusion.cpp  test_position_ekf.cpp  test_tercom.cpp
src/fiber_nav_gazebo/: CMakeLists.txt  package.xml
src/fiber_nav_gazebo/models/plane/: model.config  model.sdf
src/fiber_nav_gazebo/models/quadtailsitter/: model.sdf  model_px4.sdf
src/fiber_nav_gazebo/terrain/: terrain_data.json
src/fiber_nav_gazebo/worlds/: canyon.world  canyon_harmonic.sdf  terrain_world.sdf  terrain_world.sdf.template
src/fiber_nav_mode/: CMakeLists.txt  package.xml
src/fiber_nav_mode/config/: canyon_mission.yaml  gps_denied_ekf_mission.yaml  gps_denied_mission.yaml  straight_500m.yaml  tercom_mission.yaml  terrain_mission.yaml
src/fiber_nav_mode/include/fiber_nav_mode/: canyon_mission.hpp  hold_mode.hpp  terrain_altitude_controller.hpp  vtol_mission_executor.hpp  vtol_navigation_mode.hpp
src/fiber_nav_mode/src/: canyon_mission_node.cpp  hold_mode_node.cpp  vtol_navigation_node.cpp
src/fiber_nav_mode/test/: test_canyon_waypoints.cpp  test_terrain_altitude_controller.cpp  test_vtol_navigation.cpp
src/fiber_nav_o3de/gems/px4_bridge/Code/: CMakeLists.txt  px4bridge_files.cmake  px4bridge_shared_files.cmake  px4bridge_test_files.cmake
src/fiber_nav_o3de/gems/px4_bridge/Code/Include/PX4Bridge/: px4_bridge_bus.h
src/fiber_nav_o3de/gems/px4_bridge/Code/Source/: hil_sensor_publisher.cpp  hil_sensor_publisher.h  mavlink_connection.cpp  mavlink_connection.h  px4_bridge_module.cpp  px4_mavlink_bridge.cpp  px4_mavlink_bridge.h  px4_motor_output.cpp  px4_motor_output.h
src/fiber_nav_o3de/gems/px4_bridge/Code/Source/Tests/: hil_sensor_publisher_test.cpp  mavlink_connection_test.cpp
src/fiber_nav_physics/: CMakeLists.txt  package.xml
src/fiber_nav_physics/include/fiber_nav_physics/: aerodynamics.hpp  hil_sensor_publisher.hpp  mavlink_connection.hpp  motor_dynamics.hpp  sensor_synthesis.hpp  types.hpp  vehicle_dynamics.hpp  vtol_transition.hpp
src/fiber_nav_physics/src/: aerodynamics.cpp  hil_sensor_publisher.cpp  mavlink_connection.cpp  motor_dynamics.cpp  sensor_synthesis.cpp  vehicle_dynamics.cpp  vtol_transition.cpp
src/fiber_nav_physics/tests/: physics_test.cpp
src/fiber_nav_sensors/: CMakeLists.txt  package.xml
src/fiber_nav_sensors/include/fiber_nav_sensors/: cable_dynamics.hpp  flight_math.hpp  gimbal_math.hpp  optical_flow_direction.hpp  wrench_output.hpp
src/fiber_nav_sensors/msg/: CableStatus.msg  SpoolStatus.msg  SpoolVelocity.msg
src/fiber_nav_sensors/src/: cable_dynamics_node.cpp  gimbal_controller_node.cpp  image_streamer.cpp  mock_attitude_publisher.cpp  optical_flow_direction.cpp  plane_controller.cpp  spool_sim_driver.cpp  stabilized_flight_controller.cpp  vision_direction_sim.cpp  wrench_output_gz.cpp  wrench_output_ros.cpp
src/fiber_nav_sensors/test/: test_cable_dynamics.cpp  test_flight_controller.cpp  test_gimbal_controller.cpp  test_optical_flow.cpp  test_spool_sensor.cpp  test_vision_sensor.cpp
(+20 files in other folders)
